--- a/TP-04/CBOW_Model.ipynb
+++ b/TP-04/CBOW_Model.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "61bd9e04",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
     "from collections import defaultdict\n",
     "import re\n",
     "\n",
-    "# Example text\n",
+    "# Example textfdhtxsr\n",
     "#text = \"Do all the good you can, for all the people you can, in all the ways you can, as long as you can.\"\n",
     "path = \"D:\\\\Y5 AMS\\\\Information-WR\\\\TP-04\\\\IMDB Dataset.csv\"\n",
     "text = pd.read_csv(path)[\"review\"][0]\n",
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "ec25efd1",
    "metadata": {},
    "outputs": [
@@ -228,24 +228,10 @@
     "embedding_dim = 10 # You can choose any dimension (embadding dim size = no limit depend on weight since we train in Nueral Network)\n",
     "W1, W2 = initialize_weights(vocab_size, embedding_dim)\n",
     "print(\"W1 Shape:\", W1.shape)\n",
-    "print(\"W2 Shape:\", W2.shape)"
+    "print(\"W2 Shape:\", W2.shape)\n",
+    "\n",
+    "# You can choose any dimension embadding value :(- positive = samantic meaning, - negative = opposite meaning)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3303d919",
-   "metadata": {},
-   "source": [
-    "# You can choose any dimension embadding value :(- positive = samantic meaning, - negative = opposite meaning)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5dc5696",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -544,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "id": "04dfd9ed",
    "metadata": {},
    "outputs": [
@@ -553,10 +539,10 @@
      "output_type": "stream",
      "text": [
       "Context Words: ['the', 'you']\n",
-      "Predicted Target Word: of\n",
-      "Probability: 0.2943855852699086\n",
-      "Embedding Vector for Predicted Word: [ 1.13997192 -1.56883575 -0.69906878 -0.86606486  0.16191354 -1.69577302\n",
-      "  3.63783201  1.19008381 -3.7420919  -0.99831681]\n"
+      "Predicted Target Word: a\n",
+      "Probability: 0.01766454166611733\n",
+      "Embedding Vector for Predicted Word: [0.46178689 0.19959484 0.67549317 0.41180717 0.80148279 0.3085899\n",
+      " 0.18632604 0.30465782 0.52571886 0.80320544]\n"
      ]
     }
    ],
