--- a/Test/Text_and_Document_Preparation.ipynb
+++ b/Test/Text_and_Document_Preparation.ipynb
@@ -133,6 +133,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a9960376",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Custom stop-words: {'ai', 'the', 'by', 'is', 'data', 'in', 'and', 'are'}\n",
+      "Filtered words: ['artificial', 'cambodia', 'hot', 'industries', 'innovative', 'intelligence', 'providing', 'revolutionizing', 'science', 'solutions', 'technologies', 'topic', 'various', 'very']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Custom stop-word removal\n",
+    "custom_stopwords = {'is', 'the', 'are', 'and', 'in', 'by', 'ai', 'data'}\n",
+    "\n",
+    "# Remove custom stopwords from scikit-learn tokenized words\n",
+    "filtered_words = [word for word in words_sklearn if word.lower() not in custom_stopwords]\n",
+    "print(\"Custom stop-words:\", custom_stopwords)\n",
+    "print(\"Filtered words:\", filtered_words)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d786d8a4",
    "metadata": {},
